chore: correct spacing
on mobile, made line spacing better, got rid of a weird double space

--- a/style.css
+++ b/style.css
@@ -66,15 +66,22 @@ p {
 
 header {
     z-index: 1000;
-    position: sticky;
-    top: 0;
-    font-size: 2em;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color:#ffffff;
-    padding: 0em 2em;
-    margin-top: -6vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5%;
+    gap: 50%;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 1em 1em;
+    font-size: 1.5em;
+    justify-content: center;
+    background-color: #2f2f2f;
+    border-bottom: #ffffff 0.1em solid;
 }
 
 /* Splash page styles */
@@ -183,7 +190,7 @@ main {
     grid-template-columns: repeat(2, 1fr);
     gap: 2em;
     width: 45%;
-    margin: 3em auto;
+    margin: 6em auto;
     padding: 2em;
 }
 
@@ -193,8 +200,6 @@ main {
 
 .projectCard {
     display: block;
-    background: #383838;
-    border-radius: 1em;
     overflow: hidden;
     text-align: center;
     transition: 0.25s ease;
@@ -205,21 +210,20 @@ main {
 }
 
 .projectsInGridImage {
+    border: 5px solid black;
+    border-radius: 10px;
     width: 100%;
     height: 20em;
     object-fit: cover;
-    border-bottom: 0.2em solid #ffffff;
+    max-width: 95%;
+    border: 1px solid #ffffff;
 }
-
-
-.caption {
-  font-size: 1.8em;
-  font-weight: bold;
-  padding: 1em;
-}
-
 
 /* Individual project styles */
+.projectLink {
+    margin-right: -2px;
+}
+
 .projectExplanation {
     width: 50em;
     margin: 2em auto;
@@ -256,6 +260,10 @@ main {
 @media (max-width: 600px) {
     body {
         padding-top: 3vh;
+    }
+
+    h2 {
+        line-height: 1.2em;
     }
 
     header {
